# Necromanzer

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  launcher.sh
.github/: FUNDING.yml
.github/workflows/: build.yml  check.yml  release.yml  rust-clippy.yml  tests.yml
assets/img/: tileset.xcf
data/core/: bodyparts.json  items.json  terrains.json
inc/img/: tileset.xcf
res/img/: logo.xcf  tileset.xcf  zombie.xcf
src/: action.rs  app.rs  assets.rs  avatar.rs  chunk.rs  colors.rs  cycle_enum.rs  direction.rs  engine.rs  enums.rs  fov.rs  fps.rs  geometry.rs  input.rs  main.rs  maptile.rs  savefile.rs  scene.rs  scene_manager.rs  scenes.rs  settings.rs  sprite.rs  textures.rs  window.rs  world.rs
src/actions/: action.rs  action_result.rs  action_type.rs  mod.rs
src/assets/: alert.rs  button.rs  data_entity.rs  fonts.rs  game_data.rs  images.rs  mod.rs  names.rs  prepared_font.rs  tileset.rs
src/game/: avatar.rs  fov.rs  game_data.rs  log.rs  mod.rs  world.rs
src/game/actions/: action.rs  action_impl.rs  action_result.rs  action_type.rs  mod.rs  possibility.rs
src/game/ai/: brain.rs  mod.rs
src/game/animals/: fur_color.rs  helpers.rs
src/game/bodies/: body.rs  data.rs  helpers.rs  mod.rs  sex.rs
src/game/human/: body.rs  character.rs  gender.rs  hair_color.rs  helpers.rs  main_hand.rs  mod.rs  personality.rs  skin_tone.rs
src/game/log/: category.rs  event.rs  mod.rs
src/game/map/: chunk.rs  item.rs  mod.rs  passage.rs  pos.rs  terrain.rs  tile.rs
src/geometry/: circles.rs  direction.rs  mod.rs  point.rs  two_dim_direction.rs
src/human/: body.rs  character.rs  gender.rs  main_hand.rs  mod.rs  skin_tone.rs
src/map/: chunk.rs  item.rs  mod.rs  pos.rs  terrain.rs  terrains.rs  tile.rs
src/map/items/: axe.rs  body_part.rs  cloak.rs  corpse.rs  gravestone.rs  hat.rs  knife.rs  mod.rs  rags.rs  shovel.rs
src/map/terrains/: boulder.rs  dirt.rs  grass.rs  grave.rs  mod.rs  pit.rs
src/map/terrains_impl/: boulder.rs  dirt.rs  grass.rs  grave.rs
src/savefile/: game_view.rs  load.rs  meta.rs  mod.rs  save.rs
src/scenes/: create_character.rs  create_world.rs  game.rs  game_menu.rs  game_mode.rs  game_scene.rs  helpers.rs  load_world.rs  main_menu.rs  manager.rs  mod.rs  scene.rs  scene_impl.rs  settings.rs  transition.rs
src/scenes/game/: body_view.rs  mod.rs  (+6 more)
src/settings/: game.rs  mod.rs  time.rs  window.rs
src/sprites/: alert.rs  bg.rs  button.rs  image.rs  input.rs  label.rs  meshy.rs  mod.rs  position.rs  sprite.rs
src/ui/: alert.rs  bg.rs  button.rs  game_log.rs  image.rs  input.rs  label.rs  meshy.rs  mod.rs  position.rs  sprite.rs  traits.rs
(+64 files in other folders)
