[package]
name = "necromanzer"
version = "0.1.0"
authors = ["Ilya Agafonov <tairesh.rus@gmail.com>"]
repository = "https://github.com/Tairesh/Necromanzer"
license-file = "LICENSE"
build = "build.rs"

[dependencies.tetra]
version = "0.7"
default-features = false
features = ["serde_support","texture_png","texture_jpeg","font_ttf"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
num_enum = "0.5"
variant_count = "1.1"
enum_dispatch = "0.3"
arrayvec = { version = "0.7", features = ["serde"] }

[build-dependencies]
winres = "0.1"