[package]
name = "necromanzer"
description = "Roguelike where you play as a necromancer and construct dark creatures from dead bodies by adding and removing body parts."
version = "0.1.0"
authors = ["Ilya Agafonov <tairesh.rus@gmail.com>"]
repository = "https://github.com/Tairesh/Necromanzer"
license-file = "LICENSE"
build = "build.rs"
edition = "2021"

[dependencies.tetra]
version = "0.7"
default-features = false
features = ["serde_support","texture_png","texture_jpeg","font_ttf"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.13"
rand = "0.8"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
enum_dispatch = "0.3"
arrayvec = { version = "0.7", features = ["serde"] }
phf = { version = "0.10", features = ["macros"] }
once_cell = "1.10"
enum-iterator = "1.1.1"
geometry = { git="https://github.com/Tairesh/geometry.git", features = ["serde", "rand"] }

[build-dependencies]
winres = "0.1"

[package.metadata.bundle]
name = "Necromanzer"
identifier = "com.tairesh.necromanzer"
icon = ["assets/img/zombie.ico", "assets/img/zombie.png"]
#resources = ["assets"]
copyright = "Copyright Ⓒ Ilya Agafonov"
category = "RolePlaying"
deb_depends = ["libsdl2-2.0-0 (>= 2.0.5)"]
osx_frameworks = ["SDL2"]